--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
         <button onclick="showPopup();">Launch Popup</button>
 
+        <h1> Hello World!</h1>
+
         <h1>Links</h1>
         <ul>
             <li>
